[package]
name = "redis-rs"
version = "0.1.0"
authors = ["Konstantinos Chasialis <koschasialis@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] }
ordered-float = "5.1.0" # async networking
clap = { version = "4", features = ["derive"] } # argument parser
hex = "0.4"
hex-literal = "1.1.0"
sha2 = "0.11.0-rc.5"
tempfile = "3"